2015-04-14  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/predicates.md (any_QIreg_operand): Rename from
	q_regs_operand.  Do not process subregs.
	(QIreg_operand): Use QI_REGNO_P predicate.
	(ext_QIreg_operand): Ditto.
	(ext_register_operand): Ditto.
	* config/i386/i386.md (TEST splitters): Use QIreg_operand predicate.
	(AND splitters): Ditto.
	(AND with -65536 splitter): Add SWI48 mode for operand 0.
	(AND with -256 splitter): Use any_QIreg_operand predicate and
	SWI248 mode for operand 0.
	(AND with -65281 splitter): Use QIreg_operand predicate and SWI248
	mode for operand 0.
	(SETCC + MOVZBL peepholes): Update for renamed any_QIreg_operand.

2015-04-13  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/plugins.texi: Rewrite first introductory paragraph.

2015-04-12  Jan Hubicka  <hubicka@ucw.cz>

	* tree-vrp.c (nonnull_arg_p): THIS pointers and references are non-zero.
	(gimple_stmt_nonzero_warnv_p): Reference return values are non-zero.

2015-04-12  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-profie.c (ipa_profile): Check number of parameters
	and possible polymorphic call targets before
	devirtualizing.

2015-04-13  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*bmi2_umul<mode><dwi>3_1): Merge from
	*bmi2_umulsidi3_1 and *bmi2_umulditi3_1 using DWIH mode iterator.

2015-04-13  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65204
	* tree-ssa-ccp.c (evaluate_stmt): Always evaluate address
	takens for bit-CCP.

2015-04-13  Richard Biener  <rguenther@suse.de>

	PR target/65660
	* config/i386/i386.c (bdver1_cost): Double cond_taken_branch_cost
	and cond_not_taken_branch_cost to 4 and 2.
	(bdver2_cost): Likewise.
	(bdver3_cost): Likewise.
	(bdver4_cost): Likewise.

2015-04-12  Jan Hubicka  <hubicka@ucw.cz>

	* hash-table.h (hash_table constructor): Add mem stats.
	(alloc_entries): Likewise.

2015-04-12  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (ipcp_driver): Relase prev_edge.
	* passes.c (execute_one_pass): Only add transform if pass has one.
